[package]
name = "qtpi"
version = "0.1.0"
edition = "2021"
authors = ["Zach Brown <zach@zb.dev>"]
repository = "https://github.com/cpubot/qtpi"
license = "MIT OR Apache-2.0"
categories = ["concurrency", "asynchronous"]
keywords = ["distributed", "queue", "p2p"]
description = "A p2p queue system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
